# dnp3-workbench

./: .dockerignore  .env.production.example  .gitignore  README.md  docker-compose.portainer.yml  docker-compose.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: client.py  master.py
backend/app/schemas/: client.py  master.py
backend/app/services/: client_manager.py  dnp3_base.py  dnp3_session_factory.py  master_manager.py  master_runtime_client.py  native_master_runtime_session.py  pydnp3_engine.py
backend/outstation_simulator/: main.py
backend/scripts/: probe_pydnp3.py
docker/: Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  Dockerfile.frontend.prod  nginx.frontend.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ClientListPanel.jsx  ClientWorkspace.jsx  OutstationsPanel.jsx  SettingsPanel.jsx  TrafficPanel.jsx
frontend/src/components/tabs/: CommConfigTab.jsx  DataPointsTab.jsx  LogViewerTab.jsx  PointCommandsTab.jsx  PollingConfigTab.jsx  ScadaMonitorTab.jsx  StationCommandsTab.jsx  TrafficMonitorTab.jsx
frontend/src/services/: api.js
services/dnp3-master-runtime/: CMakeLists.txt  Dockerfile
services/dnp3-master-runtime/src/: demo_outstation.cpp  demo_outstation.h  main.cpp  opendnp3_master_bridge.cpp  opendnp3_master_bridge.h
